kubernetes/apps/whoami/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: whoami-deny
  namespace: whoami
spec:
  ipAllowList:
    sourceRange:
      - "127.0.0.1/32" # no matches
