kubernetes/apps/whoami/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingressroute
  namespace: whoami
  annotations:
    external-dns.alpha.kubernetes.io/provider: cloudflare
    external-dns.alpha.kubernetes.io/hostname: whoami.dmhosted.com
    external-dns.alpha.kubernetes.io/target: b8f93036-6de6-4d1c-a590-bdbf64f990ad.cfargotunnel.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    # Only allow requesting '/' or '/api'
    - match: >-
        Host(`whoami.dmhosted.com`) && Path(`/`)
        && (Method(`GET`) || Method(`HEAD`))
        && !QueryRegexp(`env`, `.*`) && !QueryRegexp(`wait`, `.*`)
      kind: Rule
      priority: 100
      services:
        - name: whoami
          port: http
    - match: Host(`whoami.dmhosted.com`)
      kind: Rule
      priority: 1
      middlewares:
        - name: whoami-deny
      services: # not actually used
        - name: whoami
          port: http
  tls:
    secretName: whoami-public-cert
